<resources>

    <!--图片描述-->
    <string name="des_weather_img">天气图片</string>
    <string name="des_location_img">天气图片</string>
    <string name="des_back_img">返回上一级</string>
    <string name="des_send_img">发送</string>
    <string name="des_logo_img">iMystery0</string>
    <string name="des_username_img">用户名</string>
    <string name="des_password_img">密码</string>
    <string name="des_login_img">登录</string>
    <string name="des_register_img">注册</string>
    <string name="des_remember_img">记住我</string>
    <string name="des_menu_img">菜单图片</string>
    <string name="des_music_img">歌手图片</string>
    <string name="des_more_img">更多</string>
    <string name="des_play_img">播放暂停</string>
    <string name="des_last_img">上一曲</string>
    <string name="des_next_img">下一曲</string>
    <string name="des_splash_img">闪屏</string>
    <string name="des_viewpager_img">viewpager</string>
    <string name="des_viewpagerButton_img">立即体验</string>
    <string name="des_refresh_img">刷新</string>
    <string name="des_head_img">个人资料头像</string>

    <!--字符串引用-->
    <string name="app_name">iMystery0</string>
    <string name="hint_username">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="button_name1">登录</string>
    <string name="button_name2">注册</string>
    <string name="text1">记住我</string>
    <string name="text2">忘记密码?</string>
    <string name="text3">加入我们!</string>
    <string name="feedback_text1">意见反馈</string>
    <string name="feedback_text2">请输入您遇到的问题:</string>
    <string name="feedback_text3">请输入您的联系方式:</string>
    <string name="feed_back_button">提交</string>
    <string name="music_search">扫描</string>
    <string name="music_title">音乐播放器</string>
    <string name="chat_hint">说点什么吧</string>
    <string name="history">历史记录</string>
    <string name="history_delete">删除全部</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
