<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:contentDescription="@string/des_logo_img"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/logo"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:id="@+id/imageView"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imageView"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/login_edittext_bacgroud"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:id="@+id/re_username_layout"
        android:layout_height="40dp">

        <EditText
            android:layout_width="200dp"
            android:inputType="textPersonName"
            android:hint="@string/hint_username"
            android:textColorHint="@color/editText"
            android:textColor="@color/editText"
            android:id="@+id/re_username"
            android:background="@null"
            android:layout_centerHorizontal="true"
            android:layout_height="match_parent"/>


        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/des_username_img"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/username"
            android:layout_toLeftOf="@id/re_username"
            android:layout_toStartOf="@id/re_username"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/re_password_layout"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/login_edittext_bacgroud"
        android:layout_below="@+id/re_username_layout"
        android:layout_height="40dp">

        <EditText
            android:layout_width="200dp"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:background="@null"
            android:textColorHint="@color/editText"
            android:textColor="@color/editText"
            android:layout_centerHorizontal="true"
            android:layout_height="match_parent"
            android:id="@+id/re_password"/>


        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/des_password_img"
            android:src="@drawable/password"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/re_password"
            android:layout_toStartOf="@id/re_password"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/re_button_layout"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/re_password_layout"
        android:layout_height="40dp">

        <ImageButton
            android:layout_width="match_parent"
            android:id="@+id/register_button"
            android:contentDescription="@string/des_register_img"
            android:background="@drawable/login_button_background"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/editText"
            android:text="@string/button_name2"
            android:id="@+id/re_textView"/>
    </RelativeLayout>


</RelativeLayout>
