<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="80dp"
                    android:id="@+id/back_logo"
                    android:src="@drawable/logo"
                    android:contentDescription="@string/app_name"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/feedback_text1"
                    android:gravity="bottom"
                    android:textSize="20sp"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback_text2"
                android:textSize="15sp"
                android:layout_marginTop="20dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="5dp"
                android:id="@+id/editText_body"
                android:hint="@string/feedback_text2"
                android:gravity="top"
                android:background="@drawable/line"
                android:lines="5"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/feedback_text3"
                android:textSize="15sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:inputType="number"
                android:background="@drawable/line"
                android:ems="10"
                android:id="@+id/editText_user"/>

        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feed_back_button"
        android:id="@+id/feed_back_button"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>
