<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:orientation="vertical"
              android:background="@drawable/background"
              android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_weight="4"
        android:layout_height="match_parent">

        <ImageButton
            android:layout_width="40dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/des_back_img"
            android:layout_centerVertical="true"
            android:layout_height="40dp"
            android:background="@drawable/back_button"
            android:id="@+id/back_Button"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/music_title"
            android:id="@+id/music_title"
            android:layout_toRightOf="@id/back_Button"
            android:layout_toEndOf="@id/back_Button"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="50dp"
            android:layout_marginEnd="50dp"/>

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="match_parent">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/music_list"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_weight="4"
        android:layout_height="match_parent">

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/des_play_img"
            android:background="@drawable/play_button"
            android:layout_centerInParent="true"
            android:id="@+id/play_button"/>

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/des_last_img"
            android:layout_centerVertical="true"
            android:background="@drawable/last_button"
            android:layout_toLeftOf="@id/play_button"
            android:layout_toStartOf="@id/play_button"
            android:id="@+id/last_button"/>

        <ImageButton
            android:layout_width="60dp"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/des_next_img"
            android:layout_marginStart="10dp"
            android:background="@drawable/next_button"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/play_button"
            android:layout_toRightOf="@id/play_button"
            android:layout_height="60dp"
            android:id="@+id/next_button"/>
    </RelativeLayout>
</LinearLayout>
