<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:contentDescription="@string/des_background_img"
        android:layout_height="match_parent"
        android:id="@+id/music_background"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/layout_title"
        android:layout_alignParentTop="true"
        android:layout_height="50dp">

        <ImageButton
            android:layout_width="40dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/des_back_img"
            android:layout_centerVertical="true"
            android:layout_height="40dp"
            android:background="@drawable/btn_back"
            android:id="@+id/back_Button"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/music_title"
            android:id="@+id/music_title"
            android:layout_toRightOf="@id/back_Button"
            android:layout_toEndOf="@id/back_Button"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="50dp"
            android:layout_marginEnd="50dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/layout_control"
        android:layout_alignParentBottom="true"
        android:layout_height="60dp">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/des_play_img"
            android:background="@drawable/btn_play"
            android:layout_centerInParent="true"
            android:id="@+id/play_button"/>

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/des_last_img"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_last"
            android:layout_toLeftOf="@id/play_button"
            android:layout_toStartOf="@id/play_button"
            android:id="@+id/last_button"/>

        <ImageButton
            android:layout_width="40dp"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/des_next_img"
            android:layout_marginStart="10dp"
            android:background="@drawable/btn_next"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/play_button"
            android:layout_toRightOf="@id/play_button"
            android:layout_height="40dp"
            android:id="@+id/next_button"/>
    </RelativeLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_title"
        android:layout_above="@+id/layout_control"
        android:id="@+id/music_list"/>
</RelativeLayout>
